--- a/blank.html
+++ b/blank.html
@@ -50,6 +50,14 @@
 	          </div>
 	        </div>
       	</form>
+      	<ul class="nav navbar-nav hidden-xs">
+			<li>
+				<a href="#search" data-toggle="class:hide" class="text-muted">
+					<i class="icon icon-equalizer text"></i>
+					<i class="icon icon-equalizer text-active"></i>
+				</a>
+			</li>
+		</ul>
       	<div class="navbar-right">
       		<ul class="nav navbar-nav m-n hidden-xs nav-user user">
       			<li class="hidden-xs">
@@ -159,6 +167,9 @@
 		</aside>
 		<section id="content">
 			<section class="vbox">
+				<header class="bg-light header header-md animated fadeInUp" id="search">
+		
+				</header>
 				<section class="w-f">
 					<section class="hbox stretch">
 						
