--- a/blank.html
+++ b/blank.html
@@ -167,9 +167,49 @@
 		</aside>
 		<section id="content">
 			<section class="vbox">
-				<header class="bg-light header header-md animated fadeInUp" id="search">
-		
-				</header>
+				<header class="header header-sm text-center bg-black animated fadeInUp" id="search">
+					 <div class="container" class="center">
+						<form class="navbar-form m-t m-l-n-xs hidden-xs" role="search">
+					        <div class="btn-group" data-toggle="buttons">
+			                  <label class="btn btn-dark">
+			                    <input type="radio" name="options"><i class="fa fa-check text-active"></i> General
+			                  </label>
+			                  <label class="btn btn-dark">
+			                    <input type="radio" name="options"><i class="fa fa-check text-active"></i> Anime
+			                  </label>
+			                  <label class="btn btn-dark active">
+			                    <input type="radio" name="options"><i class="fa fa-check text-active"></i> People
+			                  </label>
+			                </div>
+			                <div class="btn-group" data-toggle="buttons">
+			                  <label class="btn btn-success">
+			                    <input type="radio" name="options"><i class="fa fa-check text-active"></i> SFW
+			                  </label>
+			                  <label class="btn btn-warning">
+			                    <input type="radio" name="options"><i class="fa fa-check text-active"></i> Sketchy
+			                  </label>
+			                  <label class="btn btn-danger active">
+			                    <input type="radio" name="options"><i class="fa fa-check text-active"></i> NSFW
+			                  </label>
+			                </div>
+					        <!-- Split button -->
+							<div class="btn-group">
+							  <button type="button" class="btn btn-dark">Action</button>
+							  <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							    <span class="caret"></span>
+							    <span class="sr-only">Toggle Dropdown</span>
+							  </button>
+							  <ul class="dropdown-menu">
+							    <li><a href="#">Action</a></li>
+							    <li><a href="#">Another action</a></li>
+							    <li><a href="#">Something else here</a></li>
+							    <li role="separator" class="divider"></li>
+							    <li><a href="#">Separated link</a></li>
+							  </ul>
+							</div>
+				      	</form>
+				    </div>
+	            </header>
 				<section class="w-f">
 					<section class="hbox stretch">
 						
